- Account full name shown in sidebar

--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
       <!-- RIGHT SIDEBAR (overlay drawer on all sizes) -->
       <aside class="sidebar" id="sidebar" aria-label="Dashboard sidebar">
         <div class="sidebar-inner">
+          <div class="sidebar-user">
+            <div class="sidebar-user-label">Signed in as</div>
+            <div class="sidebar-user-name" id="sidebarUserName">-</div>
+            <div class="sidebar-user-email" id="sidebarUserEmail"></div>
+          </div>
+
           <div class="sidebar-title">Tools</div>
 
           <div class="sidebar-actions">
