--- a/login.html
+++ b/login.html
@@ -7,56 +7,28 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@400;500;600;700&display=swap"
     rel="stylesheet"
   />
   <link rel="stylesheet" href="./login.css" />
 </head>
 <body class="mode-login">
+  <header class="auth-topbar">
+    <div class="auth-topbar-actions">
+      <a class="btn ghost" href="./home.html">Back to home</a>
+    </div>
+  </header>
   <main class="auth-page">
-    <div class="auth-shell">
-      <section class="auth-hero">
-        <div class="hero-badge">Client Access</div>
-        <div class="hero-brand">
-          <div class="brand-mark"></div>
-          <div>
-            <div class="brand-title">Chatbot Dashboard</div>
-            <div class="brand-sub">Analytics for real conversations</div>
-          </div>
+    <section class="auth-panel" aria-live="polite">
+      <div class="panel-brand">
+        <div class="brand-mark" aria-hidden="true"></div>
+        <div>
+          <div class="brand-title">Chatbot Dashboard</div>
+          <div class="brand-sub">Secure workspace access</div>
         </div>
-        <h1>Measure what your assistant actually does.</h1>
-        <p class="hero-copy">
-          Secure sign in for teams that care about outcomes, not just volume.
-          Connect your Supabase and keep your data in your own workspace.
-        </p>
-        <ul class="hero-list">
-          <li>Success, escalation, and lead metrics with drilldowns</li>
-          <li>Filter by channel, topic, and time range</li>
-          <li>Exportable conversations and failure reasons</li>
-        </ul>
-        <div class="hero-card">
-          <div class="hero-card-title">Setup steps</div>
-          <div class="hero-steps">
-            <div>
-              <div class="step-kicker">1</div>
-              <div class="step-title">Create your account</div>
-              <div class="step-copy">Seamlessly connect and view your data with our professional analytics.</div>
-            </div>
-            <div>
-              <div class="step-kicker">2</div>
-              <div class="step-title">Review your data</div>
-              <div class="step-copy">Get the latest conversations between Assistant and Client, in real-time.</div>
-            </div>
-            <div>
-              <div class="step-kicker">3</div>
-              <div class="step-title">Easy setup</div>
-              <div class="step-copy">Convert your data and save yourself a headache.</div>
-            </div>
-          </div>
-        </div>
-      </section>
+      </div>
 
-      <section class="auth-panel" aria-live="polite">
+      <div class="panel-actions">
         <div class="panel-toggle" role="group" aria-label="Account mode">
           <button class="toggle-btn is-active" id="modeLogin" type="button" aria-pressed="true">
             Sign in
@@ -69,135 +41,135 @@
         <button class="link-btn magic-top-btn" type="button" id="magicTopBtn">
           Use magic link
         </button>
+      </div>
 
-        <div class="panel-copy">
-          <h2 class="panel-title" id="panelTitle">Welcome back</h2>
-          <p class="panel-subtitle" id="panelSubtitle">
-            Sign in to your client workspace.
-          </p>
+      <div class="panel-copy">
+        <h2 class="panel-title" id="panelTitle">Welcome back</h2>
+        <p class="panel-subtitle" id="panelSubtitle">
+          Sign in to your client workspace.
+        </p>
+      </div>
+
+      <form id="authForm" novalidate>
+        <div class="field" data-mode="create" data-field="fullName">
+          <label for="fullName">Full name</label>
+          <input id="fullName" name="fullName" autocomplete="name" placeholder="Jamie Rivera" />
+          <span class="field-error"></span>
         </div>
 
-        <form id="authForm" novalidate>
-          <div class="field" data-mode="create" data-field="fullName">
-            <label for="fullName">Full name</label>
-            <input id="fullName" name="fullName" autocomplete="name" placeholder="Jamie Rivera" />
+        <div class="field" data-mode="create" data-field="company">
+          <label for="company">Company</label>
+          <input id="company" name="company" autocomplete="organization" placeholder="Your company" />
+          <span class="field-error"></span>
+        </div>
+
+        <div class="section-block">
+          <div class="section-head">
+            <div class="section-title">Password access</div>
+            <div class="section-sub" id="passwordSub">Sign in with your email and password.</div>
+          </div>
+
+          <div class="field" data-field="email">
+            <label for="email">Work email</label>
+            <input
+              id="email"
+              name="email"
+              type="email"
+              autocomplete="email"
+              placeholder="you@company.com"
+            />
             <span class="field-error"></span>
           </div>
 
-          <div class="field" data-mode="create" data-field="company">
-            <label for="company">Company</label>
-            <input id="company" name="company" autocomplete="organization" placeholder="Your company" />
-            <span class="field-error"></span>
-          </div>
-
-          <div class="section-block">
-            <div class="section-head">
-              <div class="section-title">Password access</div>
-              <div class="section-sub" id="passwordSub">Sign in with your email and password.</div>
-            </div>
-
-            <div class="field" data-field="email">
-              <label for="email">Work email</label>
+          <div class="field" data-field="password">
+            <label for="password">Password</label>
+            <div class="input-wrap">
               <input
-                id="email"
-                name="email"
-                type="email"
-                autocomplete="email"
-                placeholder="you@company.com"
-              />
-              <span class="field-error"></span>
-            </div>
-
-            <div class="field" data-field="password">
-              <label for="password">Password</label>
-              <div class="input-wrap">
-                <input
-                  id="password"
-                  name="password"
-                  type="password"
-                  autocomplete="current-password"
-                  placeholder="At least 8 characters"
-                />
-                <button
-                  class="password-eye"
-                  id="togglePassword"
-                  type="button"
-                  aria-label="Show password"
-                  aria-pressed="false"
-                  data-visible="false"
-                >
-                  <span class="eye-show" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M2 12s4-6 10-6 10 6 10 6-4 6-10 6-10-6-10-6z"></path>
-                      <circle cx="12" cy="12" r="3.2"></circle>
-                    </svg>
-                  </span>
-                  <span class="eye-hide" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M2 12s4-6 10-6 10 6 10 6-4 6-10 6-10-6-10-6z"></path>
-                      <path d="M4 4l16 16"></path>
-                    </svg>
-                  </span>
-                </button>
-              </div>
-              <span class="field-helper">Use at least 8 characters.</span>
-              <span class="field-error"></span>
-            </div>
-
-            <div class="field" data-mode="create" data-field="confirmPassword">
-              <label for="confirmPassword">Confirm password</label>
-              <input
-                id="confirmPassword"
-                name="confirmPassword"
+                id="password"
+                name="password"
                 type="password"
-                autocomplete="new-password"
-                placeholder="Repeat your password"
+                autocomplete="current-password"
+                placeholder="At least 8 characters"
               />
-              <span class="field-error"></span>
+              <button
+                class="password-eye"
+                id="togglePassword"
+                type="button"
+                aria-label="Show password"
+                aria-pressed="false"
+                data-visible="false"
+              >
+                <span class="eye-show" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M2 12s4-6 10-6 10 6 10 6-4 6-10 6-10-6-10-6z"></path>
+                    <circle cx="12" cy="12" r="3.2"></circle>
+                  </svg>
+                </span>
+                <span class="eye-hide" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M2 12s4-6 10-6 10 6 10 6-4 6-10 6-10-6-10-6z"></path>
+                    <path d="M4 4l16 16"></path>
+                  </svg>
+                </span>
+              </button>
             </div>
-
-            <button class="primary-btn" id="passwordSubmitBtn" type="submit" data-method="password">
-              Sign in
-            </button>
+            <span class="field-helper">Use at least 8 characters.</span>
+            <span class="field-error"></span>
           </div>
 
-          <div class="section-divider"><span>or</span></div>
-
-          <div class="section-block magic-block" id="magicSection">
-            <div class="section-head">
-              <div class="section-title">Magic link</div>
-              <div class="section-sub" id="magicSub">Email a secure sign-in link.</div>
-            </div>
-
-            <div class="field" data-field="magicEmail">
-              <label for="magicEmail">Email</label>
-              <input
-                id="magicEmail"
-                name="magicEmail"
-                type="email"
-                autocomplete="email"
-                placeholder="you@company.com"
-              />
-              <span class="field-error"></span>
-            </div>
-
-            <div class="magic-hint" id="magicHint">
-              We will email you a secure sign-in link. No password needed.
-            </div>
-
-            <button class="secondary-btn" id="magicSubmitBtn" type="submit" data-method="magic">
-              Send magic link
-            </button>
+          <div class="field" data-mode="create" data-field="confirmPassword">
+            <label for="confirmPassword">Confirm password</label>
+            <input
+              id="confirmPassword"
+              name="confirmPassword"
+              type="password"
+              autocomplete="new-password"
+              placeholder="Repeat your password"
+            />
+            <span class="field-error"></span>
           </div>
 
-          <div class="panel-note" id="panelNote">
-            We only use your email for authentication and account notices.
-          </div>
-        </form>
+          <button class="primary-btn" id="passwordSubmitBtn" type="submit" data-method="password">
+            Sign in
+          </button>
+        </div>
 
-        <div class="form-message" id="formMessage" role="status" aria-live="polite"></div>
-      </section>
-    </div>
+        <div class="section-divider"><span>or</span></div>
+
+        <div class="section-block magic-block" id="magicSection">
+          <div class="section-head">
+            <div class="section-title">Magic link</div>
+            <div class="section-sub" id="magicSub">Email a secure sign-in link.</div>
+          </div>
+
+          <div class="field" data-field="magicEmail">
+            <label for="magicEmail">Email</label>
+            <input
+              id="magicEmail"
+              name="magicEmail"
+              type="email"
+              autocomplete="email"
+              placeholder="you@company.com"
+            />
+            <span class="field-error"></span>
+          </div>
+
+          <div class="magic-hint" id="magicHint">
+            We will email you a secure sign-in link. No password needed.
+          </div>
+
+          <button class="secondary-btn" id="magicSubmitBtn" type="submit" data-method="magic">
+            Send magic link
+          </button>
+        </div>
+
+        <div class="panel-note" id="panelNote">
+          We only use your email for authentication and account notices.
+        </div>
+      </form>
+
+      <div class="form-message" id="formMessage" role="status" aria-live="polite"></div>
+    </section>
   </main>
 
   <script type="module" src="./js/login.js"></script>
