- Home page changes - Deleted zoom in for mobile?

--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
           CHATBOT <span class="accent">DASHBOARD</span>
         </h1>
         <p class="hero-subline">
-          AI performance tracking that turns conversation data into clear outcomes.
-          See success, escalation, and revenue impact in one place.
+          Your assistant runs 24/7 and gives you clear visibility into every conversation.
+          Costing a fraction compared to a monthly employee salary, whilst delivering direct results.
         </p>
         <div class="hero-actions">
           <a class="btn outline" href="./login.html?mode=create">Try free demo</a>
@@ -94,25 +94,16 @@
 
     <section class="impact" id="results">
       <div class="impact-copy">
-        <h2>AI CAN <span class="accent">SKYROCKET</span> YOUR SALES</h2>
+        <h2>YOUR <span class="accent">ASSISTANT</span> NEVER SLEEPS</h2>
         <p>
-          Without changing your day to day operations. Surface the hidden gaps in
-          conversations and convert lost traffic into new revenue.
+          Run a reliable assistant around the clock while keeping overhead low.
+          See every message between Assistant and Client in one place.
         </p>
-        <div class="impact-list">
-          <div class="impact-item">
-            <h3>Turn lost traffic into new revenue</h3>
-            <p>Recover conversations that would have escalated to support.</p>
-          </div>
-          <div class="impact-item">
-            <h3>Sell more to current customers</h3>
-            <p>Identify upsell moments and track follow-up outcomes.</p>
-          </div>
-          <div class="impact-item">
-            <h3>Respond much faster</h3>
-            <p>Use real-time signals to adjust bot flows and content.</p>
-          </div>
-        </div>
+        <ul class="impact-list">
+          <li>Seamlessly connect and view your data with our professional analytics.</li>
+          <li>Get the latest conversations between Assistant and Client, in real-time.</li>
+          <li>Convert your data and save yourself a headache.</li>
+        </ul>
       </div>
 
       <div class="impact-visual" aria-hidden="true">
@@ -127,13 +118,13 @@
 
     <section class="calculator" id="calculator">
       <div class="section-head">
-        <h2>CALCULATE THE <span class="accent">HIDDEN REVENUE</span> IN YOUR TRAFFIC</h2>
-        <p>These numbers are based on the results we usually see with partners.</p>
+        <h2>SEE THE <span class="accent">REAL-TIME</span> IMPACT</h2>
+        <p>Track coverage, speed, and outcomes without extra manual reporting.</p>
       </div>
 
       <div class="calc-grid">
         <div class="calc-card">
-          <div class="calc-title">New traffic (under 60 days old)</div>
+          <div class="calc-title">New conversations this month</div>
           <div class="calc-slider">
             <span class="track"></span>
             <span class="thumb" style="left:8%"></span>
@@ -141,7 +132,7 @@
           <div class="calc-value">5,000</div>
         </div>
         <div class="calc-card">
-          <div class="calc-title">Customers to upsell to</div>
+          <div class="calc-title">Active client threads</div>
           <div class="calc-slider">
             <span class="track"></span>
             <span class="thumb" style="left:18%"></span>
@@ -149,7 +140,7 @@
           <div class="calc-value">5,000</div>
         </div>
         <div class="calc-card">
-          <div class="calc-title">Old traffic (over 60 days old)</div>
+          <div class="calc-title">Archived conversations</div>
           <div class="calc-slider">
             <span class="track"></span>
             <span class="thumb" style="left:12%"></span>
@@ -157,9 +148,9 @@
           <div class="calc-value">50,000</div>
         </div>
         <div class="calc-card highlight">
-          <div class="calc-title">Additional revenue</div>
-          <div class="calc-value">$1,625,000</div>
-          <div class="calc-note">Modeled pipeline impact.</div>
+          <div class="calc-title">Monthly cost advantage</div>
+          <div class="calc-value">50%+</div>
+          <div class="calc-note">Compared to a single employee salary.</div>
         </div>
       </div>
     </section>
@@ -214,26 +205,26 @@
     <section class="how">
       <div class="section-head center">
         <p class="eyebrow">Here is how</p>
-        <h2>HERE IS <span class="accent">HOW IT WORKS</span></h2>
+        <h2>HERE IS <span class="accent">HOW IT RUNS</span></h2>
       </div>
       <div class="how-grid">
         <div class="how-card">
           <div class="how-number">1</div>
           <div class="how-icon">WWW</div>
-          <h3>Reach lost traffic</h3>
-          <p>Use conversation insights to recover missed opportunities.</p>
+          <h3>Always on</h3>
+          <p>The assistant is available 24/7 without downtime.</p>
         </div>
         <div class="how-card">
           <div class="how-number">2</div>
           <div class="how-icon">SMS</div>
-          <h3>Engage faster</h3>
-          <p>Respond with high confidence answers that convert.</p>
+          <h3>Real-time visibility</h3>
+          <p>See Assistant and Client messages as they happen.</p>
         </div>
         <div class="how-card">
           <div class="how-number">3</div>
           <div class="how-icon">$</div>
-          <h3>Close more sales</h3>
-          <p>Track outcomes and revenue impact in one dashboard.</p>
+          <h3>Lower overhead</h3>
+          <p>Reduce costs by over 50% versus a monthly salary.</p>
         </div>
       </div>
       <div class="how-cta">
