dollar signs spins

--- a/home.html
+++ b/home.html
@@ -231,7 +231,7 @@
         </div>
         <div class="how-card">
           <div class="how-number">3</div>
-          <div class="how-icon dollar-icon">$</div>
+          <div class="how-icon dollar-icon"><span class="dollar-mark">$</span></div>
           <h3>Lower overhead</h3>
           <p>Reduce costs by over 50% versus a monthly salary.</p>
         </div>
