--- a/home.html
+++ b/home.html
@@ -235,6 +235,7 @@
           <div class="how-icon eye-icon" aria-hidden="true">
             <img class="eye-base" src="./assets/Eye_Icon.png" alt="" />
             <span class="eye-pupil"><span class="pupil-dot"></span></span>
+            <span class="eye-line" aria-hidden="true"></span>
           </div>
           <h3>Real-time visibility</h3>
           <p>See Assistant and Client messages as they happen.</p>
